# flying-fish

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  response_writer.rs  state.rs  uci.rs
cli/src/messages/: commands.rs  mod.rs  responses.rs
cli/tests/: happy_path.rs
engine/: Cargo.toml
engine/benches/: criterion.rs  search.rs
engine/src/: algebraic_notation.rs  bitboard.rs  evaluation.rs  lib.rs  metrics.rs  perft.rs  search.rs  transposition_table.rs
engine/src/move_gen/: all_pieces.rs  hyperbola_quintessence.rs  leaping_pieces.rs  magic_bitboard.rs  masks.rs  mod.rs  traits.rs
engine/src/position/: fen.rs  mod.rs  zobrist_hash.rs
engine/src/search/: mod.rs  move_ordering.rs
engine/tests/: perft.rs  play_game.rs  search.rs  zobrist_hash.rs
src/: bitboard.rs  fen.rs  lib.rs  move_gen.rs  perft.rs  position.rs  search.rs
src/move_gen/: hyperbola_quintessence.rs  leaping_pieces.rs  mod.rs
src/position/: fen.rs  mod.rs
tests/: move_gen.rs  perft.rs  play_game.rs
uci/: Cargo.toml
uci/src/: consts.rs  engine_writer.rs  lib.rs  main.rs  response_writer.rs  state.rs  uci.rs
uci/src/messages/: commands.rs  mod.rs  responses.rs  to_client.rs  to_server.rs
uci/tests/: happy_path.rs
web/: Cargo.toml  tailwind.config.js
web/src/: app.rs  layout.rs  lib.rs  main.rs
web/src/routes/index/: chess_board.rs  mod.rs  moves.rs
