[package]
name = "chess"
version = "0.1.0"
edition = "2021"
authors = ["Will Forman wf8581@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.3"
tabled = "0.12.2"
test-case = "3.1.0"
testresult = "0.3.0"
thiserror = "1.0.40"
