[package]
name = "engine"
version = "0.2.0"
edition = "2024"
authors = ["Will Forman wf8581@gmail.com"]

[features]
# Controls whether metrics are captured.
metrics = []

default = []

[profile.release]
debug = 1

[dependencies]
arrayvec = "0.7.6"
strum = "0.27.2"
strum_macros = "0.27.2"
tabled = "0.20.0"
testresult = "0.4.1"
thiserror = "2.0.16"
tracing = "0.1"

[dev-dependencies]
criterion = "0.7.0"
test-case = "3.3.1"

[[bench]]
name = "criterion"
harness = false
