[package]
name = "uci"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.38"
dirs = "5.0.1"
engine = { path = "../engine" }
statig = "0.3.0"
test-case = "3.3.1"
testresult = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winnow = "0.6.5"
